
	This file is in Unicode charset, with UTF-8 encoding.

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2010-01-23

	* corrected divide by zero problem in bogoutil's robx computation.

	2009-08-13

	* contrib/spamitarium.pl updated to version 0.4.0
	  (thanks to Tom Anderson)

	2009-08-05

	* Updated and integrated Ted Phelps's "Patch to prevent .ENCODING from
	  being discarded by bogoutil -m" (SourceForge Patch #1743984).
	  Thanks to Ted for debugging the issue and providing the patch (which
	  was for bogofilter v1.1.5).

1.2.1	2009-08-01 (released)

	2009-08-01

	* Update configure to use "host" rather than "target", to match the
	  newer autotools cross-build semantics. Untested.
	  Developers changing the build system and users who build from SVN
	  will now need automake 1.9 and autoconf 2.60.

	2009-07-31

	* Fix Christian Frommeyer's MIME decoding bug, Ubuntu/Launchpad Bug
	  #320829. As a side effect, also fixes misattribution of MIME bodies
	  as MIME headers with mime: tag.  Original bug report:
	  https://bugs.launchpad.net/ubuntu/+source/bogofilter/+bug/320829

	  Before this fix, bogofilter did not properly MIME-decode the first
	  line in a body. This was especially bad with Christian's samples
	  where the whole body was only one long base64 line.

	2009-05-28

	* Removed two scripts that are auto-built.

	* Added test case for Stephen Davies' Q-P EOL problem (see below).

	2009-05-25

	* Fixed EOL problem in quoted_printable text. Problem reported by
	  Stephen Davies and identified by Pavel Kankovsky.

1.2.0	2009-02-21 (released) 2009-03-28 (declared stable)

	2009-02-20
	* Flex-2.5.35 has fix for memory allocation problem in 2.5.4,